can use token with swagger
