# src/swagger/SwaggerOutput.json
@@ -51,7 +51,12 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       },
       "post": {
         "tags": [
@@ -224,10 +229,48 @@
           }
         }
       }
+    },
+    "/login": {
+      "post": {
+        "tags": [
+          "Login"
+        ],
+        "summary": "login",
+        "description": "login",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/login"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
+      "login": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "example": "test"
+          },
+          "password": {
+            "type": "string",
+            "example": "1234"
+          }
+        }
+      },
       "user": {
         "type": "object",
         "properties": {
@@ -291,19 +334,9 @@
       }
     },
     "securitySchemes": {
-      "api_key": {
-        "type": "apiKey",
-        "name": "api_key",
-        "in": "header"
-      },
-      "petstore_auth": {
-        "type": "oauth2",
-        "authorizationUrl": "https://petstore.swagger.io/oauth/authorize",
-        "flow": "implicit",
-        "scopes": {
-          "read_pets": "read your pets",
-          "write_pets": "modify pets in your account"
-        }
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer"
       }
     }
   },
